// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.eslintrc.js mem-fs editor create 1`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint'
};"
`;

exports[`.eslintrc.js mem-fs editor delete 1`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo',
        bar: 'bar'
    }
};"
`;

exports[`.eslintrc.js mem-fs editor extend 1`] = `
"const {join} = require('path');
const {existsSync} = require('fs-extra');

module.exports = {
    env: {es6: true, jest: true},
    extends: ['omaha-prime-grade'],
    parser: 'babel-eslint',
    key: {foo: 'foo', bar: 'bar', baz: baz}
};"
`;

exports[`.eslintrc.js mem-fs editor extend 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo'
    }
};"
`;

exports[`.eslintrc.js mem-fs editor extend 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo',
        bar: 'bar'
    }
};"
`;

exports[`.eslintrc.js mem-fs editor prepend 1`] = `
"const {existsSync} = require('fs-extra');

module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo',
        bar: 'bar'
    }
};"
`;

exports[`.eslintrc.js mem-fs editor prepend 2`] = `
"const {join} = require('path');
const {existsSync} = require('fs-extra');

module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo',
        bar: 'bar'
    }
};"
`;

exports[`.eslintrc.js mem-fs editor prepend 3`] = `
"const {join} = require('path');
const {existsSync} = require('fs-extra');

module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint',
    key: {
        foo: 'foo',
        bar: 'bar',
        baz: baz
    }
};"
`;

exports[`.eslintrc.js mem-fs editor read 1`] = `
"const {join} = require('path');
const {existsSync} = require('fs-extra');

module.exports = {
    env: {es6: true, jest: true},
    extends: ['omaha-prime-grade'],
    parser: 'babel-eslint',
    key: {foo: 'foo', bar: 'bar', baz: baz}
};"
`;

exports[`Makefile editor addComment 1`] = `
"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json
# Knowledge of the Holy One is understanding"
`;

exports[`Makefile editor addTask 1`] = `
"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json
foo:
	echo foo
bar:
	echo bar"
`;

exports[`Makefile editor append 1`] = `
"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json
test line"
`;

exports[`Makefile editor appendScripts (use global) 1`] = `
"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json


test:
	@jest --coverage


lint:
	@eslint . -c ./.eslintrc.js


lint:watch:
	@watch 'npm run lint' src


build:
	@echo Starting build
	@webpack
	@echo Build complete

"
`;

exports[`Makefile editor appendScripts (use local) 1`] = `
"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json
bin := /home/vagrant/dev/tomo-cli/__tests__/fixtures/node_modules/.bin/


test:
	@$(bin)jest --coverage


lint:
	@$(bin)eslint . -c ./.eslintrc.js


lint:watch:
	@$(bin)watch 'npm run lint' src


build:
	@echo Starting build
	@$(bin)webpack
	@echo Build complete

"
`;

exports[`Makefile editor create 1`] = `"# Built from /home/vagrant/dev/tomo-cli/__tests__/fixtures/package.json"`;

exports[`Makefile editor importScripts 1`] = `Object {}`;

exports[`Makefile editor importScripts 2`] = `
Object {
  "build": "webpack",
  "lint": "eslint . -c ./.eslintrc.js",
  "lint:watch": "watch 'npm run lint' src",
  "postbuild": "echo Build complete",
  "prebuild": "echo Starting build",
  "test": "jest --coverage",
}
`;

exports[`getVersions format response from npm (only allow valid version strings) 1`] = `
Array [
  "1.0.0",
  "2.0.0",
  "3.0.0",
]
`;

exports[`package.json mem-fs editor copy 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "chalk": "2.4.2",
    "delay": "4.2.0",
    "execa": "1.0.0",
  },
  "description": "",
  "devDependencies": Object {
    "@babel/cli": "^7.4.3",
    "@babel/core": "^7.4.3",
    "eslint": "^5.16.0",
  },
  "keywords": Array [],
  "license": "ISC",
  "main": "index.js",
  "name": "fixtures",
  "scripts": Object {
    "build": "webpack",
    "lint": "eslint . -c ./.eslintrc.js",
    "lint:watch": "watch 'npm run lint' src",
    "postbuild": "echo Build complete",
    "prebuild": "echo Starting build",
    "test": "jest --coverage",
  },
  "version": "1.0.0",
}
`;

exports[`package.json mem-fs editor create 1`] = `
Object {
  "description": "A super cool app/server/tool/library/widget/thingy",
  "keywords": Array [],
  "license": "MIT",
  "name": "my-project",
  "version": "0.0.0",
}
`;

exports[`package.json mem-fs editor delete 1`] = `
Object {
  "description": "A super cool app/server/tool/library/widget/thingy",
  "keywords": Array [],
  "license": "MIT",
  "name": "my-project",
  "version": "0.0.0",
}
`;

exports[`package.json mem-fs editor extend 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "chalk": "2.4.2",
    "delay": "4.2.0",
    "execa": "1.0.0",
  },
  "description": "",
  "devDependencies": Object {
    "@babel/cli": "^7.4.3",
    "@babel/core": "^7.4.3",
    "eslint": "^5.16.0",
  },
  "keywords": Array [],
  "license": "ISC",
  "main": "index.js",
  "name": "fixtures",
  "scripts": Object {
    "build": "webpack",
    "foo": "bar",
    "lint": "eslint . -c ./.eslintrc.js",
    "lint:watch": "watch 'npm run lint' src",
    "postbuild": "echo Build complete",
    "prebuild": "echo Starting build",
    "test": "jest --coverage",
  },
  "version": "1.0.0",
}
`;

exports[`package.json mem-fs editor read 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "chalk": "2.4.2",
    "delay": "4.2.0",
    "execa": "1.0.0",
  },
  "description": "",
  "devDependencies": Object {
    "@babel/cli": "^7.4.3",
    "@babel/core": "^7.4.3",
    "eslint": "^5.16.0",
  },
  "keywords": Array [],
  "license": "ISC",
  "main": "index.js",
  "name": "fixtures",
  "scripts": Object {
    "build": "webpack",
    "lint": "eslint . -c ./.eslintrc.js",
    "lint:watch": "watch 'npm run lint' src",
    "postbuild": "echo Build complete",
    "prebuild": "echo Starting build",
    "test": "jest --coverage",
  },
  "version": "1.0.0",
}
`;
